[workspace]
members = [
    "drmem-api",
    "drivers/*",
    "drmemd"
]
default-members = ["drmemd"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
toml = { version = "0.8", default-features = false }
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false }
serde = { version = "1", default-features = false, features = ["rc"] }
serde_json = { version = "1", default-features = false }
palette = { version = "0.7", default-features = false }
reqwest = { version = "0.13", default-features = false }

# Profiles used by all binaries and packages.

[profile.dev.build-override]
opt-level = 3
incremental = false

[profile.dev]
opt-level = 'z'
debug = false
lto = false
codegen-units = 4
incremental = false

[profile.dev.package."*"]
opt-level = 'z'
debug = false
incremental = false

[profile.release.build-override]
opt-level = 3
incremental = false

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
debug-assertions = false
strip = "symbols"
incremental = false

[profile.release.package."*"]
opt-level = 3
debug = false
incremental = false
