[package]
name = "drmem-api"
version = "0.2.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
description = "Traits and types used internally by the DrMem control system"
homepage = "https://github.com/DrMemCS/drmem"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded"]
keywords = ["control-system", "automation"]

[lib]
doctest = false

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait.workspace = true

toml.workspace = true

chrono.workspace = true

tokio.workspace = true
tokio-stream.workspace = true

serde.workspace = true
serde_derive.workspace = true
