[package]
name = "drmem-api"
version = "0.6.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
description = "Traits and types used internally by the DrMem control system"
homepage = "https://github.com/DrMemCS/drmem"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded"]
keywords = ["control-system", "automation"]

[lib]
doctest = false

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono.workspace = true
chrono.default-features = false

toml.workspace = true
toml.default-features = false

tokio.workspace = true
tokio.default-features = false

tokio-stream.workspace = true
tokio-stream.default-features = false

serde.workspace = true
serde.default-features = false

serde_derive.workspace = true
serde_derive.default-features = false

palette.workspace = true
palette.default-features = false
palette.features = ["libm"]
