[package]
name = "drmem-api"
version = "0.7.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
description = "Traits and types used internally by the DrMem control system"
homepage = "https://github.com/DrMemCS/drmem"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded"]
keywords = ["control-system", "automation"]

[lib]
doctest = false

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono.workspace = true
chrono.default-features = false

toml.workspace = true
toml.default-features = false
toml.features = ["parse"]

tokio.workspace = true
tokio.default-features = false
tokio.features = ["time", "macros"]

tokio-stream.workspace = true
tokio-stream.default-features = false

tracing.workspace = true
tracing.default-features = false

serde.workspace = true
serde.default-features = false
serde.features = ["derive"]

palette.workspace = true
palette.default-features = false
palette.features = ["libm"]

[dev-dependencies]
tokio.workspace = true
tokio.features = ["rt"]

noop-waker = "0.1"
