[package]
name = "drmem-client-api"
version = "0.1.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2018"
description = "Defines and implements the client API to DrMem"
homepage = "https://github.com/rneswold/drmem"
repository = "https://github.com/rneswold/drmem"
license = "BSD-3-Clause"
publish = false
categories = ["embedded"]
keywords = ["control-system", "automation"]

[badges]
maintenance = { status = "actively-developed" }

[features]
# Generate code that is compatible with Tonic's `transport` module.
transport = ["tonic-build/transport", "tonic/transport"]

[dependencies]
drmem-types = { path = "../drmem-types", version = "0.1" }
tonic = { version = "0.6", default-features = false, features = [
    "prost",
    "codegen",
] }
prost = "0.9"
prost-types = "0.9"
tracing-core = "0.1.17"

[build-dependencies]
prost-build = "0.9"

[build-dependencies.tonic-build]
version = "0.6"
default-features = false
features = [ "prost" ]
