[package]
name = "drmem-driver-api"
version = "0.1.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
publish = false
categories = ["embedded"]
keywords = ["control-system", "automation"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
toml = "0.5.6"
async-trait = "0.1"
