[package]
name = "drmem-types"
version = "0.1.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2018"
description = "Traits and types used internally by the DrMem control system"
homepage = "https://github.com/rneswold/drmem"
repository = "https://github.com/rneswold/drmem"
license = "BSD-3-Clause"
publish = false
categories = ["embedded"]
keywords = ["control-system", "automation"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
