[package]
name = "drmemd"
version = "0.2.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
description = "Main process of the DrMem control system"
homepage = "https://github.com/DrMemCS/drmem"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded", "hardware-support"]
keywords = ["control-system", "automation"]

[badges]
maintenance = { status = "actively-developed" }

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"

[dependencies]
futures.workspace = true

toml.workspace = true

tokio = { workspace = true, features = ["rt-multi-thread", "time", "fs"] }
tokio-stream = { workspace = true, features = ["net"] }
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
serde_derive.workspace = true

clap = { version = "4", features = ["cargo"] }

chrono.workspace = true

drmem-api = { path = "../drmem-api", version = "0.1" }

cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"

# This section defines the driver dependencies. Most drivers are
# optional, but a few drivers define common devices for a `drmem`
# installation.

[dependencies.drmem-drv-sump]
path = "../drivers/drmem-drv-sump"
version = "0.1"
optional = true

[dependencies.drmem-drv-ntp]
path = "../drivers/drmem-drv-ntp"
version = "0.1"
optional = true

[dependencies.drmem-drv-weather-wu]
path = "../drivers/drmem-drv-weather-wu"
version = "0.1"
optional = true

# This section defines the optional dependencies for backend storage.

[dependencies.drmem-db-redis]
path = "../backends/drmem-db-redis"
version = "0.1"
optional = true

[dependencies.drmem-db-simple]
path = "../backends/drmem-db-simple"
version = "0.1"
optional = true

# This section defines the optional dependencies for the 'graphql'
# feature.

[dependencies.juniper]
version = "0.15"
optional = true

[dependencies.juniper_warp]
version = "0.7"
features = ["subscriptions"]
optional = true

[dependencies.juniper_graphql_ws]
version = "0.3"
optional = true

[dependencies.warp]
version = "0.3"
optional = true

[dependencies.libmdns]
version = "0.7"
optional = true

# These are features that can be enabled for drmem.

[features]
default = []

# Backends

simple-backend = ["drmem-db-simple"]
redis-backend = ["drmem-db-redis"]

# Client APIs

no-client = []
graphql = ["warp", "juniper", "juniper_graphql_ws", "juniper_warp", "libmdns"]

# Drivers

driver-ntp = ["drmem-drv-ntp"]
driver-sump = ["drmem-drv-sump"]
driver-weather-wu = ["drmem-drv-weather-wu"]
