[package]
name = "drmemd"
version = "0.5.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
description = "Main process of the DrMem control system"
homepage = "https://github.com/DrMemCS/drmem"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded", "hardware-support"]
keywords = ["control-system", "automation"]

[badges]
maintenance = { status = "actively-developed" }

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"

[dependencies]
async-trait.workspace = true
async-trait.default-features = false

futures.workspace = true
futures.default-features = false
futures.features = ["alloc"]

toml.workspace = true
toml.default-features = false
toml.features = ["parse"]

tokio.workspace = true
tokio.default-features = false
tokio.features = ["rt-multi-thread", "time", "fs", "macros"]

tokio-stream.workspace = true
tokio-stream.default-features = false
tokio-stream.features = ["net", "sync"]

tracing.workspace = true
tracing.default-features = false
tracing.features = ["attributes"]

tracing-futures.workspace = true
tracing-futures.default-features = false
tracing-futures.features = ["std-future", "std"]

tracing-subscriber.workspace = true
tracing-subscriber.default-features = false
tracing-subscriber.features = ["ansi"]

serde.workspace = true
serde.default-features = false

serde_derive.workspace = true
serde_derive.default-features = false

clap.version = "4"
clap.default-features = false
clap.features = ["cargo", "std"]

chrono.workspace = true
chrono.default-features = false
chrono.features = ["clock"]

palette.workspace = true
palette.default-features = false
palette.features = ["libm", "named", "named_from_str"]

lazy_static = { version = "1", default-features = false }

drmem-api = { path = "../drmem-api", version = "0.5" }

cfgrammar.version = "0.13"
cfgrammar.default-features = false

lrlex.version = "0.13"
lrlex.default-features = false

lrpar.version = "0.13"
lrpar.default-features = false

[dev-dependencies]

tokio-stream.workspace = true
tokio-stream.default-features = false
tokio-stream.features = ["sync", "time"]

# This section defines the driver dependencies. Most drivers are
# optional, but a few drivers define common devices for a `drmem`
# installation.

[dependencies.drmem-drv-ntp]
path = "../drivers/drmem-drv-ntp"
version = "0.5"
optional = true

[dependencies.drmem-drv-sump]
path = "../drivers/drmem-drv-sump"
version = "0.5"
optional = true

[dependencies.drmem-drv-tplink]
path = "../drivers/drmem-drv-tplink"
version = "0.5"
optional = true

[dependencies.drmem-drv-weather-wu]
path = "../drivers/drmem-drv-weather-wu"
version = "0.5"
optional = true

# This section defines the optional dependencies for backend storage.

[dependencies.redis]
version = "0.28"
default-features = false
features = ["tokio-comp", "streams"]
optional = true

# This section defines the optional dependencies for the 'graphql'
# feature.

[dependencies.juniper]
version = "0.16"
default-features = false
features = ["chrono"]
optional = true

[dependencies.juniper_warp]
version = "0.8"
default-features = false
features = ["subscriptions"]
optional = true

[dependencies.juniper_graphql_ws]
version = "0.4"
default-features = false
optional = true

[dependencies.warp]
version = "0.3"
default-features = false
features = ["tls", "compression-gzip"]
optional = true

[dependencies.libmdns]
version = "0.9"
default-features = false
optional = true

[dependencies.rustls-pki-types]
version = "1.11"
default-features = false
optional = true

[dependencies.ring]
version = "0.17"
default-features = false
optional = true

[dependencies.rustls-pemfile]
version = "1"
default-features = false
optional = true

# These are features that can be enabled for drmem.

[features]
default = []

# Backends

simple-backend = []
redis-backend = ["dep:redis", "graphql"]

# Client APIs

no-client = []
graphql = ["dep:warp", "dep:juniper", "dep:juniper_graphql_ws",
           "dep:juniper_warp", "dep:libmdns", "dep:rustls-pki-types",
           "dep:ring", "dep:rustls-pemfile"]
graphiql = ["graphql"]

# Drivers

all-drivers = ["drmem-drv-ntp", "drmem-drv-sump", "drmem-drv-tplink",
               "drmem-drv-weather-wu"]
