[package]
name = "drmem-db-redis"
version = "0.1.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2018"
description = "Redis backend for DrMem control system"
homepage = "https://github.com/rneswold/drmem"
repository = "https://github.com/rneswold/drmem"
license = "BSD-3-Clause"
publish = false
categories = ["embedded", "database"]
keywords = ["control-system", "automation", "database"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1"
redis = { version = "0.17.0", features = ["aio", "tokio-rt-core"] }
tracing-subscriber = "^0.2"
tracing-futures = "^0.2"
tracing = { version = "^0.1", features = ["log"] }
tokio = { version = "0.2", features = ["rt-threaded", "fs", "macros", "time"] }

drmem-api = { path = "../../drmem-api", version = "0.1" }

[dependencies.drmem-config]
path = "../../drmem-config"
version = "0.1"
features = ["redis-backend"]
