[package]
name = "drmem-db-redis"
version = "0.1.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
description = "Redis backend for DrMem control system"
homepage = "https://github.com/rneswold/drmem"
repository = "https://github.com/rneswold/drmem"
license = "BSD-3-Clause"
publish = false
categories = ["embedded", "database"]
keywords = ["control-system", "automation", "database"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1"
redis = { version = "0.21", features = ["tokio-comp"] }
tracing-subscriber = "^0.2"
tracing-futures = "^0.2"
tracing = { version = "^0.1", features = ["std"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = { version = "0.3", features = ["std"] }

drmem-api = { path = "../../drmem-api", version = "0.1" }

[dependencies.drmem-config]
path = "../../drmem-config"
version = "0.1"
features = ["redis-backend"]
