[package]
name = "drmem-db-redis"
version = "0.4.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
description = "Redis backend for DrMem control system"
homepage = "https://github.com/DrMemCS/drmem"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded", "database"]
keywords = ["control-system", "automation", "database"]

[lib]
doctest = false

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait.workspace = true

futures.workspace = true

toml.workspace = true
chrono.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
serde_derive.workspace = true

palette.workspace = true

redis.version = "0.25"
redis.default-features = false
redis.features = ["tokio-comp", "streams"]

drmem-api = { path = "../../drmem-api", version = "0.4" }
