[package]
name = "drmem-db-simple"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Simple backend for DrMem control system"
homepage = "https://github.com/DrMemCS/drmem"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded"]
keywords = ["control-system", "automation"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
toml = "0.5.6"
serde = "1.0.115"
serde_derive = "1.0.115"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = { version = "^0.1", features = ["std"] }

drmem-api = { path = "../../drmem-api", version = "0.1" }
