[package]
name = "drmem-db-simple"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Simple backend for DrMem control system"
homepage = "https://github.com/DrMemCS/drmem"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded"]
keywords = ["control-system", "automation"]

[lib]
doctest = false

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait.workspace = true

toml.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

serde.workspace = true
serde_derive.workspace = true

drmem-api = { path = "../../drmem-api", version = "0.1" }
