[package]
name = "drmem-db-simple"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
version = "0.3.1"
edition = "2021"
description = "Simple backend for DrMem control system"
homepage = "https://github.com/DrMemCS/drmem"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded"]
keywords = ["control-system", "automation"]

[lib]
doctest = false

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait.workspace = true

toml.workspace = true
chrono = { workspace = true, features = ["std"] }

futures.workspace = true

tokio = { workspace = true, features = ["time"] }
tokio-stream = { workspace = true, features = ["sync"] }
tracing.workspace = true

serde.workspace = true
serde_derive.workspace = true

drmem-api = { path = "../../drmem-api", version = "0.3" }

[dev-dependencies]
tokio-stream = { workspace = true, features = ["sync", "time"] }
