[package]
name = "drmem-drv-elgato"
version = "0.1.0"
authors = ["Beau Harrison <beauharrison@gmail.com>"]
edition = "2021"

[dependencies]
elgato-keylight = "^0.5.0"
toml = "0.5.6"
tracing-subscriber = "^0.2"
tracing-futures = "^0.2"
tracing = { version = "^0.1", features = ["std"] }
drmem-api = { path = "../../drmem-api", version = "0.1" }
drmem-config = { path = "../../drmem-config", version = "0.1" }
