[package]
name = "drmem-drv-elgato"
version = "0.1.0"
authors = ["Beau Harrison <beauharrison@gmail.com>"]
edition = "2021"

[dependencies]
dialoguer = "0.10.4"
mdns-sd = "0.7.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_repr = "0.1"
tokio = { version = "1", features = ["full"] }
toml = "0.5.6"
tracing-subscriber = "^0.2"
tracing-futures = "^0.2"
tracing = { version = "^0.1", features = ["std"] }
drmem-api = { path = "../../drmem-api", version = "0.2" }
tokio-stream = { workspace = true }
