[package]
name = "drmem-drv-hue"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde.default-features = false
serde.features = ["derive"]

tokio.workspace = true
tokio.default-features = false

tracing.workspace = true

reqwest.workspace = true
reqwest.default-features = false
reqwest.features = ["http2", "stream", "rustls", "json"]

futures.workspace = true

futures-util = "0.3"

serde_json.workspace = true
serde_json.default-features = false
serde_json.features = ["std"]

drmem-api = { path = "../../drmem-api", version = "0.7" }
