[package]
name = "drmem-drv-ntp"
version = "0.1.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
homepage = "https://github.com/DrMemCS/drmem"
description = "DrMem driver which monitors ntpd daemons"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded"]
keywords = ["control-system", "automation"]

[dependencies]
toml.workspace = true

tokio = { workspace = true, features = ["net", "io-util"] }
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true

drmem-api = { path = "../../drmem-api", version = "0.1" }
