[package]
name = "drmem-drv-sump"
version = "0.1.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
homepage = "https://github.com/DrMemCS/drmem"
description = "DrMem driver which monitors a sump pump"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded"]
keywords = ["control-system", "automation"]

[dependencies]
toml = "0.5.6"
tracing-subscriber = "^0.2"
tracing-futures = "^0.2"
tracing = { version = "^0.1", features = ["std"] }
tokio = { version = "1", features = ["time", "net", "io-util"] }
drmem-api = { path = "../../drmem-api", version = "0.1" }
drmem-config = { path = "../../drmem-config", version = "0.1" }
