[package]
name = "drmem-drv-sump"
version = "0.6.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
homepage = "https://github.com/DrMemCS/drmem"
description = "DrMem driver which monitors a sump pump"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded"]
keywords = ["control-system", "automation"]

[lib]
doctest = false

[dependencies]
serde.workspace = true
serde.default-features = false
serde.features = ["derive"]

socket2.version = "0.5"
socket2.default-features = false

toml.workspace = true
toml.default-features = false

tokio.workspace = true
tokio.default-features = false
tokio.features = ["net", "io-util", "time"]

tracing.workspace = true
tracing.default-features = false

tracing-subscriber.workspace = true
tracing-subscriber.default-features = false

drmem-api = { path = "../../drmem-api", version = "0.6" }
