[package]
name = "drmem-drv-tplink"
version = "0.1.2"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
homepage = "https://github.com/DrMemCS/drmem"
description = "DrMem driver for TP-Link devices"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded"]
keywords = ["control-system", "automation"]

[lib]
doctest = false

[dependencies]
toml.workspace = true

futures.workspace = true
tokio = { workspace = true, features = ["net", "time", "macros", "io-util"] }
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_derive.workspace = true
serde_json = { workspace = true, features = ["std"] }

drmem-api = { path = "../../drmem-api", version = "0.3.1" }
