[package]
name = "drmem-drv-tplink"
version = "0.6.0"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
homepage = "https://github.com/DrMemCS/drmem"
description = "DrMem driver for TP-Link devices"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded"]
keywords = ["control-system", "automation"]

[lib]
doctest = false

[dependencies]

toml.workspace = true
toml.default-features = false

futures.workspace = true
futures.default-features = false

tokio.workspace = true
tokio.default-features = false
tokio.features = ["net", "time", "macros", "io-util"]

tracing.workspace = true
tracing.default-features = false

tracing-futures.workspace = true
tracing-futures.default-features = false

tracing-subscriber.workspace = true
tracing-subscriber.default-features = false

serde.workspace = true
serde.default-features = false
serde.features = ["derive"]

serde_derive.workspace = true
serde_derive.default-features = false

serde_json.workspace = true
serde_json.default-features = false
serde_json.features = ["std"]

drmem-api = { path = "../../drmem-api", version = "0.6" }

[dev-dependencies]
tokio.workspace = true
tokio.features = ["rt"]
