[package]
name = "drmem-drv-weather-wu"
version = "0.4.1"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
homepage = "https://github.com/DrMemCS/drmem"
description = "DrMem driver which gets Weather Underground data"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded"]
keywords = ["control-system", "automation"]

[lib]
doctest = false

[dependencies]
toml.workspace = true

tokio = { workspace = true, features = ["net", "io-util"] }
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true

reqwest = { default-features = false, version = "0.11" }
weather-underground = "0.1"

drmem-api = { path = "../../drmem-api", version = "0.4" }
