[package]
name = "drmem-drv-weather-wu"
version = "0.7.1"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
homepage = "https://github.com/DrMemCS/drmem"
description = "DrMem driver which gets Weather Underground data"
repository = "https://github.com/DrMemCS/drmem"
license = "MIT"
categories = ["embedded"]
keywords = ["control-system", "automation"]

[lib]
doctest = false

[dependencies]
serde.workspace = true
serde.default-features = false
serde.features = ["derive"]

toml.workspace = true
toml.default-features = false

tokio.workspace = true
tokio.default-features = false

tracing.workspace = true
tracing.default-features = false

tracing-subscriber.workspace = true
tracing-subscriber.default-features = false

reqwest.version = "0.11"
reqwest.default-features = false

weather-underground.version = "0.1"
weather-underground.default-features = false

drmem-api = { path = "../../drmem-api", version = "0.7" }
